--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
   <body>
     <h1>Git Hub Testing</h1>
     <p>I hope this works</p>
-    <p>
-      I really
-      <html lang="en">
-        <head>
-          <meta charset="UTF-8" />
-          <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <title>Document</title>
-        </head>
-        <body></body>
-      </html>
-    </p>
+    <p>I really hope this works</p>
   </body>
 </html>
